RE #173: - Fixed checkbox being selected using react-select by setting z-index to 0 for label since the input is set to z-index 1 - Simplified stepper by allowing default props to update using ...attributes - Removed tmz-logo from icons and UI icons page - Darkened default primary green just slightly, lightened alerts 1%

--- a/src/components/alert/styles.scss
+++ b/src/components/alert/styles.scss
@@ -75,7 +75,7 @@ th.alert,
 
 @each $color, $value in $theme-colors {
   .alert-#{$color}.alert-inverse {
-    background: darken(theme-color($color), 4%);
+    background: darken(theme-color($color), 3%);
     font-weight: 700;
     color: $white;
     text-shadow: 0 1px 0 $gray-rgba-600;
