--- a/src/components/app/_variables.scss
+++ b/src/components/app/_variables.scss
@@ -22,8 +22,8 @@ $pink:    #fd3576;
 $red:     #f74b4b;
 $orange:  #f99520;
 $yellow:  #ffe261;
-$green:   #03caa5;
-$teal:    #11cadf;
+$green:   #04c5a2;
+$teal:    #13c8dd;
 $cyan:    #08a0e8;
 
 $primary:       $green;
